<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background_clear"
    android:fitsSystemWindows="true">

    <fragment
        android:name="com.ericandpau.pokeshopk.NavBar"
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_nav_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </fragment>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/NavBar"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="50sp"
            android:layout_marginBottom="50dp"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:hint="@string/example"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xxxxxxxxxxxxxx"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewLoginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text=""
            android:visibility="gone"
            android:padding="8dp"
            android:textSize="16sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/callback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/iniciar"
            android:backgroundTint="@color/primary_day"/>

        <Button
            android:id="@+id/registre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/no_tens_compte"
            android:backgroundTint="@color/primary_day"/>


    </LinearLayout>

    <fragment
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.ericandpau.pokeshopk.BottomNav"
        tools:ignore="MissingConstraints"
        tools:layout="@layout/fragment_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>