<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/background_clear"
    android:fitsSystemWindows="true">

    <fragment
        android:name="com.ericandpau.pokeshopk.NavBar"
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_nav_bar">
    </fragment>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:layout_constraintTop_toBottomOf="@id/NavBar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/registre" />

        <TextView
            android:id="@+id/textViewNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/nom"/>

        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_margin="5dp"
            android:hint="@string/nom" />

        <!-- Cognom -->
        <TextView
            android:id="@+id/textViewCognom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cognom" />

        <EditText
            android:id="@+id/editTextCognom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/cognom" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exemple_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <!-- PSWD -->
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cognom" />

        <EditText
            android:id="@+id/editTextPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <!-- Confirmació PSWD -->
        <TextView
            android:id="@+id/textViewPswdConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Contrassenya" />

        <EditText
            android:id="@+id/editTextPswdConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="Repeteix la contrassenya" />

        <!-- Telefon -->
        <TextView
            android:id="@+id/textViewTelefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/telefon" />

        <EditText
            android:id="@+id/editTextTelefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/telefon" />

        <!-- Adreça -->
        <TextView
            android:id="@+id/textViewAdreca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/adreca" />

        <EditText
            android:id="@+id/editTextAdreca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/adreca" />

        <TextView
            android:id="@+id/textViewCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/codi_postal" />

        <EditText
            android:id="@+id/editTextCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/codi_postal" />

        <!-- Botó de Registrar -->
        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/registrar"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary_day"/>

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            android:textSize="16sp"
            android:padding="8dp"
            android:text="" />

    </LinearLayout>

    <ImageView
        android:paddingTop="30dp"
        android:id="@+id/imageViewPikachu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pika"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registre completat!"
        android:paddingTop="150dp"
        android:paddingLeft="100dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/imageViewPikachu"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonReturnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_day"
        android:textSize="20dp"
        android:text="Tornar a l'inici"
        android:layout_below="@id/textViewStatus"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="600dp"/>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        android:name="com.ericandpau.pokeshopk.BottomNav"
        tools:ignore="MissingConstraints"
        tools:layout="@layout/fragment_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>